Kind of implement it a little
Introduce `Tests#set_status` in order to de-couple status setting from
remote context closing. This is necessary because uncaught errors may
require asynchronous cleanup, making it inappropriate to synchronously
close communication channels with remote contexts in such cases.

--- a/resources/test/tests/iframe-consolidate-errors.html
+++ b/resources/test/tests/iframe-consolidate-errors.html
@@ -38,6 +38,15 @@ child context.</p>
       "properties": {},
       "message": null,
       "stack": null
+    },
+    {
+      "status_string": "NOTRUN",
+      "phase_string": "COMPLETE",
+      "name": "This should show a harness status of 'Error' and a test status of 'Not Run'",
+      "properties": {},
+      "message": null,
+      "phase_string": "COMPLETE",
+      "stack": null
     }
   ],
   "type": "complete"
