--- a/resources/test/tests/add_cleanup_async_timeout.html
+++ b/resources/test/tests/add_cleanup_async_timeout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Test#add_cleanup: error</title>
+<title>Test#add_cleanup with Promise-returning functions (timeout handling)</title>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
@@ -11,25 +11,25 @@
 <script>
 test(function(t) {
   t.add_cleanup(function() {
-    throw new Error('exception in cleanup method');
+    return new Promise(function() {});
   });
-}, "Exceptions in cleanup cause harness failure.");
+}, 'synchronous test with asynchronous cleanup');
 </script>
 <script type="text/json" id="expected">
 {
   "summarized_status": {
-    "status_string": "ERROR",
-    "message": "Test named 'Exceptions in cleanup cause harness failure.' specified 1 'cleanup' function, and 1 failed.",
+    "status_string": "TIMEOUT",
+    "message": null,
     "stack": null
   },
   "summarized_tests": [
     {
       "status_string": "PASS",
       "phase_string": "COMPLETE",
-      "name": "Exceptions in cleanup cause harness failure.",
-      "properties": {},
+      "name": "synchronous test with asynchronous cleanup",
+      "stack": null,
       "message": null,
-      "stack": null
+      "properties": {}
     }
   ],
   "type": "complete"
