--- a/resources/test/tests/add_cleanup_err.html
+++ b/resources/test/tests/add_cleanup_err.html
@@ -20,6 +20,7 @@ test(function(t) {
   "summarized_status": {
     "status_string": "ERROR",
     "message": "Error: exception in cleanup method",
+    "message": "Error: Test named 'Exceptions in cleanup cause harness failure.' specified a 'cleanup' function which failed.",
     "stack": "(implementation-defined)"
   },
   "summarized_tests": [
