--- a/resources/test/tests/worker-dedicated.html
+++ b/resources/test/tests/worker-dedicated.html
@@ -30,7 +30,7 @@ test(function(t) {
 {
   "summarized_status": {
     "status_string": "ERROR",
-    "message": "Error: This failure is expected.",
+    "message": "Error in remote https://web-platform.test:9003/resources/test/tests/worker-error.js: Error: This failure is expected.",
     "stack": "(implementation-defined)"
   },
   "summarized_tests": [
