Fix things a little

--- a/resources/test/tests/add_cleanup_async.html
+++ b/resources/test/tests/add_cleanup_async.html
@@ -51,38 +51,25 @@ async_test(function(t) {
 </script>
 <script type="text/json" id="expected">
 {
-  "status": {
-    "ERROR": 1,
-    "OK": 0,
-    "TIMEOUT": 2,
+  "summarized_status": {
+    "status_string": "OK",
     "message": null,
-    "stack": null,
-    "status": 0
+    "stack": null
   },
-  "tests": [
+  "summarized_tests": [
     {
-      "FAIL": 1,
-      "NOTRUN": 3,
-      "PASS": 0,
-      "TIMEOUT": 2,
-      "index": "(non-deterministic)",
-      "message": null,
+      "status_string": "PASS",
       "name": "synchronous test with asynchronous cleanup",
-      "properties": {},
       "stack": null,
-      "status": 0
+      "message": null,
+      "properties": {}
     },
     {
-      "FAIL": 1,
-      "NOTRUN": 3,
-      "PASS": 0,
-      "TIMEOUT": 2,
-      "index": "(non-deterministic)",
-      "message": null,
+      "status_string": "PASS",
       "name": "testharness should wait for provided Promises to resolve",
-      "properties": {},
       "stack": null,
-      "status": 0
+      "message": null,
+      "properties": {}
     }
   ],
   "type": "complete"
