--- a/resources/test/tests/add_cleanup_err.html
+++ b/resources/test/tests/add_cleanup_err.html
@@ -19,9 +19,8 @@ test(function(t) {
 {
   "summarized_status": {
     "status_string": "ERROR",
-    "message": "Error: exception in cleanup method",
-    "message": "Error: Test named 'Exceptions in cleanup cause harness failure.' specified a 'cleanup' function which failed.",
-    "stack": "(implementation-defined)"
+    "message": "Test named 'Exceptions in cleanup cause harness failure.' specified 1 'cleanup' function, and 1 failed.",
+    "stack": null
   },
   "summarized_tests": [
     {
