--- a/resources/test/tests/worker-dedicated.html
+++ b/resources/test/tests/worker-dedicated.html
@@ -31,7 +31,7 @@ test(function(t) {
   "summarized_status": {
     "status_string": "ERROR",
     "message": "Error in remote https://web-platform.test:9003/resources/test/tests/worker-error.js: Error: This failure is expected.",
-    "stack": "(implementation-defined)"
+    "stack": null
   },
   "summarized_tests": [
     {
