--- a/resources/test/tests/iframe-consolidate-errors.html
+++ b/resources/test/tests/iframe-consolidate-errors.html
@@ -37,6 +37,14 @@ child context.</p>
       "properties": {},
       "message": null,
       "stack": null
+    },
+    {
+      "status_string": "NOTRUN",
+      "name": "This should show a harness status of 'Error' and a test status of 'Not Run'",
+      "properties": {},
+      "message": {},
+      "phase_string": "COMPLETE",
+      "stack": "(implementation-defined)"
     }
   ],
   "type": "complete"
