It works! Kind of. Needs heavy refactoring

--- a/resources/test/tests/add_cleanup_async.html
+++ b/resources/test/tests/add_cleanup_async.html
@@ -25,18 +25,18 @@ test(function(t) {
   });
 }, 'synchronous test with asynchronous cleanup');
 
-async_test(function(t) {
+promise_test(function(t) {
   assert_equals(
     completeCount, 0, 'test is not immediately considered "complete"'
   );
-  Promise.resolve().then(t.step_func(function() {
+  return Promise.resolve().then(function() {
       assert_equals(
         completeCount, 0, 'test is not asynchronously considered "complete"'
       );
 
       resolve1();
 
-      Promise.resolve().then(t.step_func(function() {
+      Promise.resolve().then(function() {
           assert_equals(
             completeCount,
             0,
@@ -45,8 +45,8 @@ async_test(function(t) {
           );
           resolve2();
           t.done();
-        }));
-    }));
+        });
+    });
 }, 'testharness should wait for provided Promises to resolve');
 </script>
 <script type="text/json" id="expected">
