--- a/resources/test/tests/add_cleanup_async_rejection.html
+++ b/resources/test/tests/add_cleanup_async_rejection.html
@@ -25,18 +25,18 @@ test(function(t) {
   });
 }, 'synchronous test with asynchronous cleanup including rejection');
 
-async_test(function(t) {
+promise_test(function(t) {
   assert_equals(
     completeCount, 0, 'test is not immediately considered "complete"'
   );
-  Promise.resolve().then(t.step_func(function() {
+  return Promise.resolve().then(function() {
       assert_equals(
         completeCount, 0, 'test is not asynchronously considered "complete"'
       );
 
       reject();
 
-      Promise.resolve().then(t.step_func(function() {
+      return Promise.resolve().then(function() {
           assert_equals(
             completeCount,
             0,
@@ -44,9 +44,8 @@ async_test(function(t) {
               'first promise'
           );
           resolve();
-          t.done();
-        }), 1000);
-    }));
+        });
+    });
 }, 'testharness should wait for provided Promises to settle');
 </script>
 <script type="text/json" id="expected">
