--- a/resources/test/tests/add_cleanup_async_rejection.html
+++ b/resources/test/tests/add_cleanup_async_rejection.html
@@ -23,30 +23,29 @@ test(function(t) {
   t.add_cleanup(function() {
     return new Promise(function(_resolve) { resolve = _resolve; });
   });
-}, 'synchronous test with asynchronous cleanup including rejection');
 
-promise_test(function(t) {
-  assert_equals(
-    completeCount, 0, 'test is not immediately considered "complete"'
-  );
-  return Promise.resolve().then(function() {
-      assert_equals(
-        completeCount, 0, 'test is not asynchronously considered "complete"'
-      );
+  setTimeout(function() {
+	  if (completeCount === 0) {
+		test(function() {}, "test is not asynchronously considered 'complete'");
+	  }
 
-      reject();
+	  reject();
 
-      return Promise.resolve().then(function() {
-          assert_equals(
-            completeCount,
-            0,
-            'test is not considered "complete" following rejection of ' +
-              'first promise'
-          );
-          resolve();
-        });
-    });
-}, 'testharness should wait for provided Promises to settle');
+	  setTimeout(function() {
+	      if (completeCount === 0) {
+	        test(
+	        	function() {},
+	        	"test is not considered 'complete' following rejection of " +
+					"first promise"
+	        );
+	      }
+
+		  resolve();
+	  }, 0);
+  }, 0);
+}, "synchronous test with asynchronous cleanup including rejection");
+
+test(function() {}, "synchronously-defined test");
 </script>
 <script type="text/json" id="expected">
 {
@@ -64,8 +63,22 @@ promise_test(function(t) {
       "properties": {}
     },
     {
-      "status_string": "PASS",
-      "name": "testharness should wait for provided Promises to settle",
+      "status_string": "NOTRUN",
+      "name": "synchronously-defined test",
+      "stack": null,
+      "message": null,
+      "properties": {}
+    },
+    {
+      "status_string": "NOTRUN",
+      "name": "test is not asynchronously considered 'complete'",
+      "stack": null,
+      "message": null,
+      "properties": {}
+    },
+    {
+      "status_string": "NOTRUN",
+      "name": "test is not considered 'complete' following rejection of first promise",
       "stack": null,
       "message": null,
       "properties": {}
