Detect timeouts during cleanup with existing code

--- a/resources/test/tests/add_cleanup_async_timeout.html
+++ b/resources/test/tests/add_cleanup_async_timeout.html
@@ -30,7 +30,7 @@ test(function() {}, 'Expected status for this test: NOTRUN');
 {
   "summarized_status": {
     "status_string": "ERROR",
-    "message": "Test named 'synchronous test with asynchronous cleanup' specified 4 'cleanup' functions, and 2 timed out.",
+    "message": "Cleanup function for test named 'synchronous test with asynchronous cleanup timed out.",
     "stack": null
   },
   "summarized_tests": [
