[testharness.js] Formalize test types
Previously, tests for the testharness.js framework were validated
according to an implicit heuristic based on the presence of a `<script>`
tag.

Introduce a declarative configuration to make this distinction explicit.
This pattern makes the validation behavior easier to understand. It also
enables future additions which further differentiate the way the two
test types are interpreted.

--- a/resources/test/tests/add_cleanup_err_multi.html
+++ b/resources/test/tests/add_cleanup_err_multi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Test#add_cleanup: multiple functions with one in error</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
