--- a/resources/test/tests/api-tests-1.html
+++ b/resources/test/tests/api-tests-1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sample HTML5 API Tests</title>
+<meta name="wpt-test-type" content="functional">
 <meta name="timeout" content="6000">
 </head>
 <body onload="load_test_attr.done()">
