--- a/resources/test/tests/force_timeout.html
+++ b/resources/test/tests/force_timeout.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Test#force_timeout</title>
+<meta name="wpt-test-type" content="functional">
 </head>
 <body>
 <h1>Test#force_timeout</h1>
