--- a/resources/test/tests/idlharness/IdlArray/is_json_type.html
+++ b/resources/test/tests/idlharness/IdlArray/is_json_type.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>IdlArray.prototype.is_json_type()</title>
+<meta name="wpt-test-type" content="unit">
 </head>
 <body>
 <div id="log"></div>
