--- a/resources/test/tests/idlharness/IdlInterface/has_to_json_regular_operation.html
+++ b/resources/test/tests/idlharness/IdlInterface/has_to_json_regular_operation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>IdlInterface.prototype.has_to_json_regular_operation()</title>
+<meta name="wpt-test-type" content="unit">
 </head>
 <body>
 <div id="log"></div>
