--- a/resources/test/tests/idlharness/IdlInterface/test_immutable_prototype.html
+++ b/resources/test/tests/idlharness/IdlInterface/test_immutable_prototype.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>idlharness: Immutable prototypes</title>
+  <meta name="wpt-test-type" content="functional">
   <script src="../../../../testharness.js"></script>
   <script src="../../../../testharnessreport.js"></script>
   <script src="../../../../WebIDLParser.js"></script>
