--- a/resources/test/tests/idlharness/IdlInterface/traverse_inherited_and_consequential_interfaces.html
+++ b/resources/test/tests/idlharness/IdlInterface/traverse_inherited_and_consequential_interfaces.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>IdlDictionary.prototype.traverse_inherited_and_consequential_interfaces()</title>
+<meta name="wpt-test-type" content="unit">
 </head>
 <body>
 <div id="log"></div>
