--- a/resources/test/tests/single-page-test-fail.html
+++ b/resources/test/tests/single-page-test-fail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <title>Example with file_is_test (should fail)</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 <script>
