--- a/resources/test/tests/uncaught-exception-handle.html
+++ b/resources/test/tests/uncaught-exception-handle.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Harness Handling Uncaught Exception</title>
+<meta name="wpt-test-type" content="functional">
 </head>
 <script src="../../testharness.js"></script>
 
