--- a/resources/test/tests/api-tests-2.html
+++ b/resources/test/tests/api-tests-2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sample HTML5 API Tests</title>
+<meta name="wpt-test-type" content="functional">
 </head>
 <body onload="load_test_attr.done()">
 <h1>Sample HTML5 API Tests</h1>
