--- a/resources/test/tests/api-tests-3.html
+++ b/resources/test/tests/api-tests-3.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sample HTML5 API Tests</title>
+<meta name="wpt-test-type" content="functional">
 </head>
 <script src="../../testharness.js"></script>
 
