--- a/resources/test/tests/idlharness/IdlDictionary/get_inheritance_stack.html
+++ b/resources/test/tests/idlharness/IdlDictionary/get_inheritance_stack.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>IdlDictionary.prototype.get_inheritance_stack()</title>
+<meta name="wpt-test-type" content="unit">
 </head>
 <body>
 <div id="log"></div>
