--- a/resources/test/tests/idlharness/IdlInterface/default_to_json_operation.html
+++ b/resources/test/tests/idlharness/IdlInterface/default_to_json_operation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>IdlDictionary.prototype.default_to_json_operation()</title>
+<meta name="wpt-test-type" content="unit">
 </head>
 <body>
 <div id="log"></div>
