--- a/resources/test/tests/idlharness/IdlInterface/test_primary_interface_of.html
+++ b/resources/test/tests/idlharness/IdlInterface/test_primary_interface_of.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>idlharness: Primary interface</title>
+  <meta name="wpt-test-type" content="unit">
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
   <script src="/resources/WebIDLParser.js"></script>
