--- a/resources/test/tests/idlharness/IdlInterface/test_to_json_operation.html
+++ b/resources/test/tests/idlharness/IdlInterface/test_to_json_operation.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>IdlInterface.prototype.test_to_json_operation()</title>
+  <meta name="wpt-test-type" content="functional">
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
   <script src="/resources/WebIDLParser.js"></script>
