--- a/resources/test/tests/iframe-callback.html
+++ b/resources/test/tests/iframe-callback.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Example with iframe that notifies containing document via callbacks</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
