--- a/resources/test/tests/iframe-consolidate-tests.html
+++ b/resources/test/tests/iframe-consolidate-tests.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Example with iframe that consolidates tests via fetch_tests_from_window</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 <script>
