--- a/resources/test/tests/order.html
+++ b/resources/test/tests/order.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Ordering</title>
+<meta name="wpt-test-type" content="functional">
 <meta name="timeout" content="6000">
 </head>
 <body>
