--- a/resources/test/tests/promise-async.html
+++ b/resources/test/tests/promise-async.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Async Tests and Promises</title>
+<meta name="wpt-test-type" content="functional">
 </head>
 <body>
 <h1>Async Tests and Promises</h1>
