--- a/resources/test/tests/promise.html
+++ b/resources/test/tests/promise.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Promise Tests</title>
+<meta name="wpt-test-type" content="functional">
 </head>
 <body>
 <h1>Promise Tests</h1>
