--- a/resources/test/tests/single-page-test-no-body.html
+++ b/resources/test/tests/single-page-test-no-body.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <title>Example single page test with no body</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 <script>
