--- a/resources/test/tests/worker-service.html
+++ b/resources/test/tests/worker-service.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Example with a service worker</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
