--- a/resources/test/tests/worker-shared.html
+++ b/resources/test/tests/worker-shared.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Example with a shared worker</title>
+<meta name="wpt-test-type" content="functional">
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
