PARTIAL: Introduce test "variants"
TODO(mike) Add documentation

--- a/resources/test/tests/add_cleanup.html
+++ b/resources/test/tests/add_cleanup.html
@@ -3,6 +3,7 @@
 <head>
 <title>Test#add_cleanup</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
