--- a/resources/test/tests/api-tests-3.html
+++ b/resources/test/tests/api-tests-3.html
@@ -3,6 +3,7 @@
 <head>
 <title>Sample HTML5 API Tests</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 </head>
 <script src="../../testharness.js"></script>
 
