--- a/resources/test/tests/force_timeout.html
+++ b/resources/test/tests/force_timeout.html
@@ -3,6 +3,8 @@
 <head>
 <title>Test#force_timeout</title>
 <meta name="wpt-test-type" content="functional">
+<meta name="wpt-test-skip-variant" content="no-promise">
+<script src="../variants.js"></script>
 </head>
 <body>
 <h1>Test#force_timeout</h1>
