--- a/resources/test/tests/order.html
+++ b/resources/test/tests/order.html
@@ -4,6 +4,7 @@
 <title>Ordering</title>
 <meta name="wpt-test-type" content="functional">
 <meta name="timeout" content="6000">
+<script src="../variants.js"></script>
 </head>
 <body>
 <div id="log"></div>
