--- a/resources/test/tests/single-page-test-pass.html
+++ b/resources/test/tests/single-page-test-pass.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <title>Example with file_is_test</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 <script>
