--- a/resources/test/tests/worker-service.html
+++ b/resources/test/tests/worker-service.html
@@ -3,6 +3,8 @@
 <head>
 <title>Example with a service worker</title>
 <meta name="wpt-test-type" content="functional">
+<meta name="wpt-test-skip-variant" content="no-promise">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
