--- a/resources/test/tests/api-tests-1.html
+++ b/resources/test/tests/api-tests-1.html
@@ -4,6 +4,7 @@
 <title>Sample HTML5 API Tests</title>
 <meta name="wpt-test-type" content="functional">
 <meta name="timeout" content="6000">
+<script src="../variants.js"></script>
 </head>
 <body onload="load_test_attr.done()">
 <h1>Sample HTML5 API Tests</h1>
