--- a/resources/test/tests/api-tests-2.html
+++ b/resources/test/tests/api-tests-2.html
@@ -3,6 +3,7 @@
 <head>
 <title>Sample HTML5 API Tests</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 </head>
 <body onload="load_test_attr.done()">
 <h1>Sample HTML5 API Tests</h1>
