--- a/resources/test/tests/generate-callback.html
+++ b/resources/test/tests/generate-callback.html
@@ -3,6 +3,7 @@
 <head>
 <title>Sample for using generate_tests to create a series of tests that share the same callback.</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
