--- a/resources/test/tests/iframe-consolidate-errors.html
+++ b/resources/test/tests/iframe-consolidate-errors.html
@@ -3,6 +3,7 @@
 <head>
 <title>Example with iframe that consolidates errors via fetch_tests_from_window</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 <script>
