--- a/resources/test/tests/iframe-msg.html
+++ b/resources/test/tests/iframe-msg.html
@@ -3,6 +3,7 @@
 <head>
 <title>Example with iframe that notifies containing document via cross document messaging</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
