--- a/resources/test/tests/promise.html
+++ b/resources/test/tests/promise.html
@@ -3,6 +3,8 @@
 <head>
 <title>Promise Tests</title>
 <meta name="wpt-test-type" content="functional">
+<meta name="wpt-test-skip-variant" content="no-promise">
+<script src="../variants.js"></script>
 </head>
 <body>
 <h1>Promise Tests</h1>
