--- a/resources/test/tests/uncaught-exception-ignore.html
+++ b/resources/test/tests/uncaught-exception-ignore.html
@@ -3,6 +3,7 @@
 <head>
 <title>Harness Ignoring Uncaught Exception</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 </head>
 <script src="../../testharness.js"></script>
 
