--- a/resources/test/tests/worker-dedicated.html
+++ b/resources/test/tests/worker-dedicated.html
@@ -3,6 +3,7 @@
 <head>
 <title>Dedicated Worker Tests</title>
 <meta name="wpt-test-type" content="functional">
+<script src="../variants.js"></script>
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 </head>
