--- a/resources/test/tests/promise-with-sync.html
+++ b/resources/test/tests/promise-with-sync.html
@@ -10,74 +10,75 @@
 <script src="../../testharness.js"></script>
 <script src="../../testharnessreport.js"></script>
 <script>
-var tests = [];
+"use strict";
+var sequence = [];
 
 test(function(t) {
-  assert_array_equals(tests, []);
-  tests.push(1);
-}, 'first synchronous test');
+  assert_array_equals(sequence, []);
+  sequence.push(1);
+}, "first synchronous test");
 
 promise_test(function() {
-  assert_array_equals(tests, [1]);
+  assert_array_equals(sequence, [1]);
 
   return Promise.resolve()
     .then(function() {
-        assert_array_equals(tests, [1]);
-        tests.push(2);
+        assert_array_equals(sequence, [1]);
+        sequence.push(2);
       });
-}, 'first promise_test');;
+}, "first promise_test");;
 
 test(function(t) {
-  assert_array_equals(tests, [1, 2]);
-  tests.push(3);
-}, 'second synchronous test');
+  assert_array_equals(sequence, [1, 2]);
+  sequence.push(3);
+}, "second synchronous test");
 
 promise_test(function() {
-  assert_array_equals(tests, [1, 2, 3]);
+  assert_array_equals(sequence, [1, 2, 3]);
 
   return Promise.resolve()
     .then(function() {
-        assert_array_equals(tests, [1, 2, 3]);
+        assert_array_equals(sequence, [1, 2, 3]);
       });
-}, 'second promise_test');;
+}, "second promise_test");;
 </script>
 <script type="text/json" id="expected">
 {
   "summarized_status": {
-    "message": null, 
-    "status_string": "OK", 
+    "message": null,
+    "status_string": "OK",
     "stack": null
   },
   "summarized_tests": [
     {
-      "message": null, 
-      "properties": {}, 
-      "stack": null, 
-      "name": "first promise_test", 
+      "message": null,
+      "properties": {},
+      "stack": null,
+      "name": "first promise_test",
       "status_string": "PASS"
-    }, 
+    },
     {
-      "message": null, 
-      "properties": {}, 
-      "stack": null, 
-      "name": "first synchronous test", 
+      "message": null,
+      "properties": {},
+      "stack": null,
+      "name": "first synchronous test",
       "status_string": "PASS"
-    }, 
+    },
     {
-      "message": null, 
-      "properties": {}, 
-      "stack": null, 
-      "name": "second promise_test", 
+      "message": null,
+      "properties": {},
+      "stack": null,
+      "name": "second promise_test",
       "status_string": "PASS"
-    }, 
+    },
     {
-      "message": null, 
-      "properties": {}, 
-      "stack": null, 
-      "name": "second synchronous test", 
+      "message": null,
+      "properties": {},
+      "stack": null,
+      "name": "second synchronous test",
       "status_string": "PASS"
     }
-  ], 
+  ],
   "type": "complete"
 }
 </script>
