--- a/resources/test/tests/add_cleanup_async_timeout.html
+++ b/resources/test/tests/add_cleanup_async_timeout.html
@@ -26,7 +26,7 @@ test(function(t) {
   });
 }, "synchronous test with asynchronous cleanup");
 
-test(function() {}, "Expected status for this test: NOTRUN");
+test(function() {}, "Synchronous test following timed out cleanup ('NOT RUN')");
 </script>
 <script type="text/json" id="expected">
 {
@@ -38,7 +38,7 @@ test(function() {}, "Expected status for this test: NOTRUN");
   "summarized_tests": [
     {
       "status_string": "NOTRUN",
-      "name": "Expected status for this test: NOTRUN",
+      "name": "Synchronous test following timed out cleanup ('NOT RUN')",
       "stack": null,
       "message": null,
       "properties": {}
